Fix footer on small devices

--- a/css/hangfire.css
+++ b/css/hangfire.css
@@ -1,23 +1,27 @@
-html {
-    position: relative;
-    min-height: 100%;
-}
-
-body {
-    margin-bottom: 220px;
-}
-
 footer {
     background-color: #eee;
     color: #747474;
     margin-top: 20px;
-    padding: 20px 0 10px;
+    padding: 20px 0;
+    width: 100%;    
+}
 
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    
-    height: 185px;
+@media (min-width:767px) {
+    html {
+        position: relative;
+        min-height: 100%;
+    }
+
+    body {
+        margin-bottom: 220px;
+    }
+
+    footer {
+        height: 185px;
+        padding-bottom: 10px;
+        position: absolute;
+        bottom: 0;
+    }
 }
 
 .navbar-hangfire {
